# diosic-plugin-youtube

./: Cargo.toml  README.md
src/: lib.rs
