[package]
name = "diosic_plugin_youtube"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
regex-lite = "0.1.5"
